<resources>
    <string name="app_name">To Com Dor</string>
    <string name="initialTitle">Bem-Vindo </string>
    <string name="initialButton">TO COM DOR? ONDE VOU?</string>
    <string name="nearbyPlacesTitle">UNIDADE DE SAÚDE</string>
    <string name="unityHint">Nome da unidade</string>
    <string name="addressLabel">ENDEREÇO</string>
    <string name="addressHint">endereço</string>
    <string name="distLabel">Distância aproximada</string>
    <string name="distHint">distância</string>
    <string name="telephoneLabel">TELEFONE</string>
    <string name="telephoneHint">telefone</string>
    <string name="title_activity_forms_screen">ScrollingActivity</string>
    <string name="formsScreenTitle">DESCREVA SEUS SINTOMAS</string>
    <string name="formsScreenButton">Enviar</string>
    <string name="resultTitle">RESULTADO</string>
    <string name="resultButton">AONDE VOU?</string>
    <string name="versao">1.0</string>
    <string name="versaoForms">1.0</string>
</resources>