<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"

    tools:context=".NearbyPlacesScreen">

    <TextView
        android:id="@+id/npTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:gravity="center"
        android:paddingVertical="5dp"

        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        android:fontFamily="@font/exo_2"
        android:text="@string/nearbyPlacesTitle"
        android:textSize="23sp"

        android:background="@drawable/border_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/npNames"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:gravity="center"
        android:paddingVertical="5dp"

        android:layout_marginTop="30dp"

        android:fontFamily="@font/exo_2_bold"
        android:hint="@string/unityHint"
        android:textSize="21sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/npTitle"/>

    <TextView
        android:id="@+id/npAddress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:gravity="center"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"

        android:layout_marginTop="70dp"

        android:fontFamily="@font/exo_2"
        android:text="@string/addressLabel"
        android:textSize="18sp"

        android:background="@drawable/border_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/npNames"/>

    <TextView
        android:id="@+id/npAddressContent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:gravity="center"
        android:paddingVertical="5dp"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        android:fontFamily="@font/exo_2"
        android:hint="@string/addressHint"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/npAddress"/>

    <TextView
        android:id="@+id/npTelephone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:gravity="center"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"

        android:layout_marginTop="70dp"

        android:fontFamily="@font/exo_2"
        android:text="@string/telephoneLabel"
        android:textSize="18sp"

        android:background="@drawable/border_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/npAddressContent"/>

    <TextView
        android:id="@+id/npTelephoneContent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:gravity="center"
        android:paddingVertical="5dp"

        android:layout_marginTop="20dp"

        android:fontFamily="@font/exo_2"
        android:hint="@string/telephoneHint"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/npTelephone"/>

</androidx.constraintlayout.widget.ConstraintLayout>